5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1764_672.log
== TEST (2019-05-31 00:35:38) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:38:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
n=vator([1])
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:39:03) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
n=ones(vetor)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:39:39) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
n=ones(int(vetor))
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-31 00:39:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
n=ones(vetor)
print(n)

-- EXECUTION TIME:
0.474407
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.
 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:40:29) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(int(input("digite o vetor: ")))))
n=ones(vetor)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:40:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=int(array(eval(input("digite o vetor: ")))))
n=ones(vetor)
print(n)

-- ERROR:
File "XXXX", line 3
    vetor=int(array(eval(input()))))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:41:00) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=int(array(eval(input("digite o vetor: "))))
n=ones(vetor)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-31 00:41:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=int(array(eval(input("digite o vetor: "))))
n=ones(vetor)
print(n)

-- EXECUTION TIME:
0.387507
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.
 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:41:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=int(array(eval(input("digite o vetor: "))))
n=ones(vetor)
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:42:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
n=int(ones(vetor))
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:44:13) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: ",dtype=int))))
n=(ones(vetor))
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:44:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: "dtype=int))))
n=(ones(vetor))
print(n)

-- ERROR:
File "XXXX", line 3
    vetor=(array(eval(input("digite o vetor: "dtype=int))))
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:44:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: ",dtype=int))))
n=(ones(vetor))
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:45:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=dtype=int(array(eval(input("digite o vetor: "))))
n=(ones(vetor))
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:45:30) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
n=dtype=int(ones(vetor))
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-31 00:45:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
n=(ones(vetor,dtype=int))
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-31 00:45:54) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
vetor=(array(eval(input("digite o vetor: "))))
n=(ones(vetor,dtype=int))
print(n)

-- EXECUTION TIME:
0.396299
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
